--- a/Health_web/static/css/style1.css
+++ b/Health_web/static/css/style1.css
@@ -26,7 +26,9 @@ margin-bottom: 0px;
 .mytext1{
 	color: #7f8c8d;
 }
-
+.mylist{
+	list-style-type: none;
+}
  
   
 .textstyle{
@@ -39,33 +41,6 @@ margin-bottom: 0px;
  background-color: #ecf0f1; 
  padding-bottom: 10px;
  padding-top: 10px;
-}
-
- .footer-top{
- 	background-color: #2c3e50;
- 	padding: 80px 0; 
- }
-
- .segment-one h3{
- 	font-family: cursive;
- 	color: #ecf0f1;
- 	letter-spacing: 3px;
- 	margin: 10px 0;
- }
- .segment-two h2{
- 	color: #ecf0f1;
- 	 text-transform: uppercase;
- }
-  .segment-two ul{
-  	margin: 0;
-  	padding: 0;
-  	list-style: none;
-  }
-
-.segment-two ul li{
-	border-bottom: 1px solid;
-	border-color: rgb(255,255,255,0.3);
-     line-height: 40px;
 }
  .segment-three h2{
  	color: #ecf0f1;
@@ -95,7 +70,7 @@ margin-bottom: 0px;
 background-color: #e74c3c;
 border:none;
 padding: 3px 15px;
-margin-left:-5px 0  ;
+margin-left:-5px   ;
 color: #ecf0f1;
 text-transform: uppercase; 
 
@@ -109,7 +84,25 @@ text-transform: uppercase;
 	line-height: 75px;
 }
 
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #2980b9;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
 
+#myBtn:hover {
+  background-color: #555;
+}
 
 
 
